<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="352dp"
            android:layout_height="94dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:hint="@string/name"
            android:inputType="text" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_width="164dp"
            android:layout_height="66dp"
            android:layout_margin="15dp"
            android:text="@string/toppings"
            android:textSize="30sp" />

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="290dp"
            android:layout_height="64dp"
            android:layout_margin="10dp"
            android:paddingLeft="24dp"
            android:text="@string/whipped_cream"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="292dp"
            android:layout_height="66dp"
            android:layout_margin="10dp"
            android:paddingLeft="24dp"
            android:text="@string/chocolate"
            android:textSize="30sp" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_width="205dp"
            android:layout_height="71dp"
            android:layout_margin="15dp"
            android:text="@string/quantity"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="358dp"
            android:layout_height="97dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="74dp"
                android:layout_height="76dp"
                android:layout_margin="5dp"
                android:background="@color/colorAccent"
                android:onClick="decrement"
                android:text="@string/minus"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="46dp"
                android:layout_height="44dp"
                android:layout_margin="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/initial_quantity_value"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <Button
                android:layout_width="71dp"
                android:layout_height="74dp"
                android:layout_margin="5dp"
                android:background="@color/colorAccent"
                android:onClick="increment"
                android:text="@string/plus"
                android:textSize="30sp" />

        </LinearLayout>

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_width="294dp"
            android:layout_height="84dp"
            android:layout_marginLeft="15dp"
            android:text="@string/ordersummary"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/ordersummarycal"
            android:layout_width="70dp"
            android:layout_height="45dp"
            android:layout_margin="5dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/initial_ordersummary"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <Button
            android:layout_width="175dp"
            android:layout_height="107dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"

            android:onClick="submitOrder"
            android:text="@string/order"
            android:textSize="30sp" />

    </LinearLayout>

</ScrollView>